--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,18 @@
-version: "3.3"
+version: "3.8"
 services:
   mysql:
     image: mysql:8.0
+    container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: secret
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
     ports:
       - "3306:3306"
     volumes:
-      - db-data:/var/lib/mysql
+      - ./db-init:/docker-entrypoint-initdb.d
     networks:
       - bridge
 
@@ -21,12 +26,9 @@ services:
       - bridge
     ports:
       - "34001:8080"
-
-volumes:
-  es_data:
-    driver: local
-  db-data: { }
+    depends_on:
+      mysql:
+        condition: service_healthy
 
 networks:
   bridge:
-    driver: bridge
