--- a/docker-compose-db.yml
+++ b/docker-compose-db.yml
@@ -1,26 +1,28 @@
-version: "3.8"
-
+version: "3.9"
 services:
   mysql:
     image: mysql:8.0
     container_name: mysql
+    environment:
+      MYSQL_USER: root
+      MYSQL_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: secret
+    ports:
+      - "3306:3306"
     healthcheck:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       timeout: 20s
       retries: 10
-    ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: secret
-    restart: always
 
   phpmyadmin:
-    image: phpmyadmin:fpm-alpine
+    image: phpmyadmin/phpmyadmin
     container_name: phpmyadmin
+    links:
+      - mysql
     depends_on:
       - mysql
+    environment:
+      PMA_HOST: mysql
     restart: always
     ports:
-      - '8089:80'
-    environment:
-      PMA_HOST: admin
+      - "8089:80"
